2008-07-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add XBOSH common prefix.

	* src/core/exmpp_xml.erl (node_to_list): Guarantee that the returned
	list is flat. To achieve this, lists:append/1 is used to concatenate
	lists.

	* c_src/exmpp_xml_expat.c, src/core/exmpp_xml.erl
	(forward_declare_ns/3): Elements with xmlns="" (empty default
	namespace) are legal. After reading "XML 1.0" and "Namespaces for XML
	1.0" (which I'm not sure I understand very well), it means that the
	element declaring this and child elements doesn't belong to any
	namespace.  Informations returned by Expat sort of confirm this. The
	port driver and node_to_list/3 were fixed accordingly: such elements
	will have their namespace set to the atom "undefined" and serialized
	properly. FYI, JSJaC sends elements with empty xmlns. Note that empty
	prefixed namespace are illegal.

2008-07-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* testsuite/eunit_tty.erl (escape_desc): Characters '_' and '-' are
	kept in filenames.

	* testsuite/xml_parser.erl, testsuite/Makefile.am: Convert XML parser
	test to EUnit.

	* testsuite/check_jid.erl, testsuite/check_xml_parser.erl: Remove
	converted tests.

	* c_src/xmpp_ns.h.in: Remove a namespace used in an example in
	XEP-0072.

	* include/exmpp.hrl: Update namespace macros to include all new
	namespaces from xmpp_ns.h.in.

	* src/server/exmpp_server_compression.erl,
	src/client/exmpp_client_compression.erl: Use the correct namespace
	during features negotiation.

2008-07-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/make-schemas-urls-list, c_src/extract-known-from-schemas,
	c_src/xmpp_ns.h.in-local, c_src/xmpp_names.h.in-local,
	c_src/xmpp_attrs.h.in-local, c_src/Makefile.am, Makefile.am: Add Perl
	scripts to automatically fetch XEP schemas and extract namespaces,
	names and attributes and create the known lists used by
	exmpp_xml_expat.
