@@ -1,3 +1,9 @@
+2008-07-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* src/core/exmpp_xml.erl (get_path): Accept 'cdata_as_list' as a path
+	component. Character data are returned as list (instead of binary)
+	obsviously.
+
 2008-07-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* include/exmpp.hrl: Add XBOSH common prefix.
